# radicle-git

./: .gitignore  .gitmodules  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  default.nix  deny.toml  flake.nix  rust-toolchain.toml  shell.nix
.github/workflows/: ci.yaml
archived/git-commit/src/: author.rs  headers.rs
archived/git-commit/t/: Cargo.toml
archived/git-commit/t/src/: commit.rs  lib.rs
archived/git-trailers/: Cargo.toml
archived/git-trailers/src/: lib.rs
archived/link-git/src/: service.rs
archived/link-git/src/odb/: index.rs
archived/link-git/src/protocol/: upload_pack.rs
archived/link-git/src/protocol/upload_pack/: legacy.rs
archived/link-git/t/: Cargo.toml
git-commit/: Cargo.toml
git-commit/src/: author.rs  lib.rs
git-commit/t/: Cargo.toml
git-commit/t/src/: commit.rs  integration.rs
git-ref-format/: Cargo.toml
git-ref-format/core/: CHANGELOG.md  Cargo.toml
git-ref-format/core/src/: deriv.rs  lit.rs  name.rs  refspec.rs  serde.rs
git-ref-format/core/src/name/: iter.rs
git-ref-format/core/src/refspec/: iter.rs
git-ref-format/macro/: CHANGELOG.md  Cargo.toml
git-ref-format/macro/src/: lib.rs
git-ref-format/src/: lib.rs
git-ref-format/t/src/: tests.rs
git-ref-format/t/src/properties/: name.rs  pattern.rs
git-storage/: Cargo.toml
git-storage/src/: backend.rs  config.rs  glob.rs  lib.rs  odb.rs  pool.rs  refdb.rs  signature.rs
git-storage/src/backend/: read.rs  write.rs
git-storage/src/backend/write/: error.rs
git-storage/src/odb/: read.rs  write.rs
git-storage/src/refdb/: iter.rs  read.rs  write.rs
git-storage/src/refdb/write/: previous.rs
git-storage/t/: Cargo.toml
git-storage/t/src/: gen.rs  lib.rs  properties.rs  tmp.rs
git-storage/t/src/properties/: odb.rs
git-types/: Cargo.toml
git-types/src/: lib.rs  reference.rs  urn.rs
link-git/: Cargo.toml
link-git/src/protocol/: fetch.rs  transport.rs  upload_pack.rs
link-git/src/protocol/upload_pack/: legacy.rs
link-git/t/: Cargo.toml
link-git/t/src/integration/: protocol.rs
nix/: sources.json
nix/cargo-nextest/: default.nix
nix/ci/: run
radicle-git-ext/: CHANGELOG.md  Cargo.toml
radicle-git-ext/git-ref-format/: Cargo.toml
radicle-git-ext/git-ref-format/core/: CHANGELOG.md  Cargo.toml
radicle-git-ext/git-ref-format/core/src/: cbor.rs  check.rs  deriv.rs  lib.rs  lit.rs  name.rs  refspec.rs  serde.rs
radicle-git-ext/git-ref-format/core/src/name/: iter.rs
radicle-git-ext/git-ref-format/core/src/refspec/: iter.rs
radicle-git-ext/git-ref-format/macro/: CHANGELOG.md  Cargo.toml
radicle-git-ext/git-ref-format/macro/src/: lib.rs
radicle-git-ext/git-ref-format/src/: lib.rs
radicle-git-ext/git-ref-format/t/: Cargo.toml
radicle-git-ext/src/: author.rs  blob.rs  commit.rs  error.rs  lib.rs  oid.rs  revwalk.rs  transport.rs  tree.rs
radicle-git-ext/src/commit/: headers.rs  trailers.rs
radicle-git-ext/src/reference/: name.rs
radicle-git-ext/t/: Cargo.toml
radicle-git-ext/t/src/: commit.rs  gen.rs  git_ref_format.rs  lib.rs  repository.rs  tests.rs
radicle-git-ext/t/src/git_ref_format/: gen.rs  properties.rs  tests.rs
radicle-git-ext/t/src/git_ref_format/properties/: name.rs  pattern.rs
radicle-git-types/: Cargo.toml
radicle-git-types/src/: lib.rs  namespace.rs  reference.rs  refspec.rs  remote.rs  urn.rs
radicle-macros/: Cargo.toml
radicle-macros/src/: lib.rs
radicle-source/: Cargo.toml
radicle-source/src/: branch.rs  commit.rs  error.rs  lib.rs  object.rs  oid.rs  person.rs  revision.rs  syntax.rs  tag.rs
radicle-source/src/object/: blob.rs  tree.rs
radicle-std-ext/: Cargo.toml
radicle-std-ext/src/: lib.rs  ops.rs  result.rs
radicle-surf/: CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md  build.rs
radicle-surf/benches/: last_commit.rs
radicle-surf/data/: README.md  git-platinum.tgz  mock-branches.txt
radicle-surf/docs/: denotational-design.md  design.md  refactor-design.md
radicle-surf/examples/: browsing.rs  diff.rs
radicle-surf/scripts/: update-git-platinum.sh
radicle-surf/src/: blob.rs  branch.rs  commit.rs  diff.rs  error.rs  file_system.rs  fs.rs  git.rs  glob.rs  history.rs  lib.rs  namespace.rs  nonempty.rs  object.rs  person.rs  refs.rs  repo.rs  revision.rs  source.rs  stats.rs  tag.rs  tree.rs  vcs.rs
radicle-surf/src/diff/: git.rs
radicle-surf/src/file_system/: directory.rs  error.rs  path.rs
radicle-surf/src/file_system/path/: unsound.rs
radicle-surf/src/git/: branch.rs  commit.rs  error.rs  glob.rs  history.rs  namespace.rs  repo.rs  stats.rs  tag.rs
radicle-surf/src/git/repo/: iter.rs
radicle-surf/src/object/: blob.rs  commit.rs  tree.rs
radicle-surf/src/source/: commit.rs  object.rs  person.rs  revision.rs  syntax.rs  view.rs
radicle-surf/src/source/object/: blob.rs  tree.rs
radicle-surf/src/vcs/: git.rs
radicle-surf/src/vcs/git/: branch.rs  commit.rs  error.rs  ext.rs  glob.rs  history.rs  namespace.rs  reference.rs  repo.rs  stats.rs  tag.rs
radicle-surf/src/vcs/git/reference/: glob.rs
radicle-surf/t/: Cargo.toml
radicle-surf/t/src/: branch.rs  code_browsing.rs  commit.rs  diff.rs  file_system.rs  git.rs  history.rs  last_commit.rs  lib.rs  namespace.rs  reference.rs  rev.rs  source.rs  submodule.rs  threading.rs  tree.rs
radicle-surf/t/src/git/: branch.rs  code_browsing.rs  commit.rs  diff.rs  last_commit.rs  namespace.rs  reference.rs  rev.rs  submodule.rs  threading.rs
scripts/ci/: run
test/: Cargo.toml  README.md
test/src/: lib.rs
test/test-helpers/: Cargo.toml
test/test-helpers/src/: gen.rs  lib.rs  logging.rs  roundtrip.rs  tempdir.rs
