[package]
name = "git-commit"
version = "0.3.0"
license = "MIT OR Apache-2.0"
edition = "2021"
authors = [
  "Alexis Sellier <alexis@radicle.xyz>",
  "Fintan Halpenny <fintan.halpenny@gmail.com>",
]
description = "A small library for parsing, displaying and creating a git commit"
keywords = ["git", "radicle"]

[dependencies]
thiserror = "1"

[dependencies.git2]
version = "0.16.1"
default-features = false
features = ["vendored-libgit2"]
