[package]
name = "git-ref-format"
version = "0.1.0"
authors = ["Kim Altintop <kim@eagain.st>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "Everything you never knew you wanted for handling git ref names."
keywords = ["git", "references"]

[lib]
doctest = false
test = false

[features]
bstr = ["git-ref-format-core/bstr"]
link-literals = ["git-ref-format-core/link-literals"]
macro = ["git-ref-format-macro"]
minicbor = ["git-ref-format-core/minicbor"]
percent-encoding = ["git-ref-format-core/percent-encoding"]
serde = ["git-ref-format-core/serde"]

[dependencies.git-ref-format-core]
version = "0.1.0"
path = "./core"

[dependencies.git-ref-format-macro]
version = "0.1.0"
path = "./macro"
optional = true
