[package]
name = "radicle-git-ext"
version = "0.10.0"
authors = [
  "Alexis Sellier <alexis@radicle.xyz>",
  "Kim Altintop <kim@eagain.st>",
  "Fintan Halpenny <fintan.halpenny@gmail.com",
  "Han Xu <keepsimple@gmail.com>",
]
edition = "2021"
homepage = "https://app.radicle.xyz/nodes/seed.radicle.xyz/rad:z6cFWeWpnZNHh9rUW8phgA3b5yGt/tree/README.md"
repository = "https://app.radicle.xyz/nodes/seed.radicle.xyz/rad:z6cFWeWpnZNHh9rUW8phgA3b5yGt"
license = "GPL-3.0-or-later"
description = "Utilities and extensions to the git2 crate"
keywords = ["git", "radicle"]

[lib]
doctest = false
test = false

[features]
minicbor = ["git-ref-format/minicbor"]
bstr = ["git-ref-format/bstr"]
percent-encoding = ["git-ref-format/percent-encoding"]

[dependencies]
percent-encoding = "2"
thiserror = "1"

[dependencies.git2]
version = "0.19"
default-features = false
features = ["vendored-libgit2"]

[dependencies.git-ref-format]
version = "0.5.0"
path = "./git-ref-format"
features = ["macro", "serde"]

[dependencies.serde]
version = "1"
features = ["derive"]
optional = true

[dependencies.radicle-std-ext]
version = "0.1.1"
path = "../radicle-std-ext"
