[package]
name = "radicle-git-ext"
version = "0.10.0"
authors = [
  "Alexis Sellier <alexis@radicle.xyz>",
  "Kim Altintop <kim@eagain.st>",
  "Fintan Halpenny <fintan.halpenny@gmail.com",
  "Han Xu <keepsimple@gmail.com>",
]
description = "Utilities and extensions to the git2 crate"
keywords = ["git", "radicle"]
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
doctest = false
test = false

[features]
minicbor = ["git-ref-format/minicbor"]
bstr = ["git-ref-format/bstr"]
percent-encoding = ["git-ref-format/percent-encoding"]

[dependencies]
percent-encoding = "2"
thiserror = "1"

[dependencies.git2]
version = "0.19"
default-features = false
features = ["vendored-libgit2"]

[dependencies.git-ref-format]
version = "0.5.0"
path = "./git-ref-format"
features = ["macro", "serde"]

[dependencies.serde]
version = "1"
features = ["derive"]
optional = true

[dependencies.radicle-std-ext]
version = "0.1.1"
path = "../radicle-std-ext"
