[package]
name = "radicle-git-types"
version = "0.1.0"
authors = ["Kim Altintop <kim@eagain.st>", "Fintan Halpenny <fintan.halpenny@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"

[lib]
doctest = false
test = false

[dependencies]
lazy_static = "1.4"
multibase = "0.9"
percent-encoding = "2"
thiserror = "1.0.30"
tracing = "0.1"

[dependencies.git2]
version = "0.15.0"
default-features = false
features = ["vendored-libgit2"]

[dependencies.minicbor]
version = "0.13"
features = ["std", "derive"]

[dependencies.radicle-git-ext]
path = "../radicle-git-ext"

[dependencies.radicle-macros]
path = "../radicle-macros"

[dependencies.radicle-std-ext]
path = "../radicle-std-ext"

[dependencies.serde]
version = "1.0"
features = ["derive"]
