[package]
name = "radicle-std-ext"
version = "0.1.1"
authors = ["The Radicle Team <dev@radicle.xyz>"]
edition = "2021"
homepage = "https://app.radicle.xyz/nodes/seed.radicle.xyz/rad:z6cFWeWpnZNHh9rUW8phgA3b5yGt/tree/README.md"
repository = "https://app.radicle.xyz/nodes/seed.radicle.xyz/rad:z6cFWeWpnZNHh9rUW8phgA3b5yGt"
license = "GPL-3.0-or-later"
description = "Monkey patches of std types"
keywords = ["std", "radicle"]

[lib]
doctest = false
test = false

[features]
default = []
nightly = []
