[package]
name = "radicle-std-ext"
version = "0.2.0"
authors = ["The Radicle Team <dev@radicle.xyz>"]
description = "Monkey patches of std types"
keywords = ["std", "radicle"]
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true


[lib]
doctest = false
test = false

[features]
default = []
nightly = []
