[package]
name = "radicle-surf"
description = "A code surfing library for VCS file systems"
readme = "README.md"
version = "0.8.0"
authors = ["The Radicle Team <dev@radicle.xyz>"]
edition = "2021"
homepage = "https://github.com/radicle-dev/radicle-surf"
repository = "https://github.com/radicle-dev/radicle-surf"
license = "GPL-3.0-or-later"

include = [
    "**/*.rs",
    "Cargo.toml",
    "data/git-platinum.tgz",
]

[lib]
test = false
doctest = false

[features]
# NOTE: testing `test_submodule_failure` on GH actions
# is painful since it uses this specific repo and expects
# certain branches to be setup. So we use this feature flag
# to ignore the test on CI.
gh-actions = []

[dependencies]
base64 = "0.13"
log = "0.4"
nonempty = "0.5"
thiserror = "1.0"

[dependencies.git2]
version = "0.16.1"
default-features = false
features = ["vendored-libgit2"]

[dependencies.git-ref-format]
version = "0.1.0"
path = "../git-ref-format"
features = ["macro", "serde"]

[dependencies.radicle-git-ext]
version = "0.2.0"
path = "../radicle-git-ext"
features = ["serde"]

[dependencies.radicle-std-ext]
version = "0.1.0"

[dependencies.serde]
version = "1"
features = ["serde_derive"]
optional = true

[build-dependencies]
anyhow = "1.0"
flate2 = "1"
tar = "0.4"
