[package]
name = "tests"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

publish = false

[lib]
doctest = false
test = true
doc = false

[dev-dependencies.git-commit-test]
path = "../git-commit/t"
features = ["test"]

[dev-dependencies.radicle-git-ext-test]
path = "../radicle-git-ext/t"
features = ["test"]

[dev-dependencies.git-ref-format-test]
path = "../git-ref-format/t"
features = ["test"]

[dev-dependencies.git-trailers-test]
path = "../git-trailers/t"
features = ["test"]

[dev-dependencies.link-git-test]
path = "../link-git/t"
features = ["test"]

[dev-dependencies.radicle-surf-test]
path = "../radicle-surf/t"
features = ["test"]

[dev-dependencies.git-storage-test]
path = "../git-storage/t"
features = ["test"]

