[package]
name = "tests"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[lib]
doctest = false
test = true
doc = false

[dev-dependencies.radicle-git-ext-test]
path = "../radicle-git-ext/t"
features = ["test"]

[dev-dependencies.radicle-surf-test]
path = "../radicle-surf/t"
features = ["test"]
