[package]
name = "git-ref-format-core"
version = "0.2.0"
authors = ["Kim Altintop <kim@eagain.st>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "Core types for the git-ref-format crate"
keywords = ["git", "references"]

[lib]
doctest = false
test = false

[dependencies]
thiserror = "1.0"

[dependencies.bstr]
version = "0.2"
optional = true

[dependencies.minicbor]
version = "0.13"
features = ["std"]
optional = true

[dependencies.percent-encoding]
version = "2.1.0"
optional = true

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true
