[package]
name = "git-storage-test"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

publish = false

[lib]
doctest = false
test = true
doc = false

[features]
test = []

[dependencies]
proptest = "1"

[dependencies.git-storage]
path = ".."

[dependencies.git2]
version = "0.17.0"
default-features = false
features = ["vendored-libgit2"]

[dependencies.radicle-git-ext]
path = "../../radicle-git-ext/"

[dependencies.test-helpers]
path = "../../test/test-helpers"

[dev-dependencies.uuid]
version = "1"
features = ["v4"]

[dev-dependencies.radicle-git-ext-test]
path = "../../radicle-git-ext/t"
features = ["test"]
