[package]
name = "git-ref-format"
version = "0.2.2"
authors = [
  "Kim Altintop <kim@eagain.st>",
  "Fintan Halpenny <fintan.halpenny@gmail.com>",
]
edition = "2021"
license = "GPL-3.0-or-later"
description = "Everything you never knew you wanted for handling git ref names."
keywords = ["git", "references"]

[lib]
doctest = false
test = false

[features]
bstr = ["git-ref-format-core/bstr"]
macro = ["git-ref-format-macro"]
minicbor = ["git-ref-format-core/minicbor"]
percent-encoding = ["git-ref-format-core/percent-encoding"]
serde = ["git-ref-format-core/serde"]

[dependencies.git-ref-format-core]
version = "0.2.1"
path = "./core"

[dependencies.git-ref-format-macro]
version = "0.2.1"
path = "./macro"
optional = true
