[package]
name = "git-ref-format"
version = "0.5.0"
authors = [
  "Kim Altintop <kim@eagain.st>",
  "Fintan Halpenny <fintan.halpenny@gmail.com>",
]
edition = "2021"
homepage = "https://app.radicle.xyz/nodes/seed.radicle.xyz/rad:z6cFWeWpnZNHh9rUW8phgA3b5yGt/tree/README.md"
repository = "https://app.radicle.xyz/nodes/seed.radicle.xyz/rad:z6cFWeWpnZNHh9rUW8phgA3b5yGt"
license = "MIT OR Apache-2.0"
description = "Everything you never knew you wanted for handling git ref names."
keywords = ["git", "references"]

[lib]
doctest = false
test = false

[features]
bstr = ["git-ref-format-core/bstr"]
macro = ["git-ref-format-macro"]
minicbor = ["git-ref-format-core/minicbor"]
percent-encoding = ["git-ref-format-core/percent-encoding"]
serde = ["git-ref-format-core/serde"]

[dependencies.git-ref-format-core]
version = "0.5.0"
path = "./core"

[dependencies.git-ref-format-macro]
version = "0.5.0"
path = "./macro"
optional = true
