[package]
name = "git-ref-format"
version = "0.5.0"
authors = [
  "Kim Altintop <kim@eagain.st>",
  "Fintan Halpenny <fintan.halpenny@gmail.com>",
]
description = "Everything you never knew you wanted for handling git ref names."
keywords = ["git", "references"]
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
doctest = false
test = false

[features]
bstr = ["git-ref-format-core/bstr"]
macro = ["git-ref-format-macro"]
minicbor = ["git-ref-format-core/minicbor"]
percent-encoding = ["git-ref-format-core/percent-encoding"]
serde = ["git-ref-format-core/serde"]

[dependencies.git-ref-format-core]
version = "0.5.0"
path = "./core"

[dependencies.git-ref-format-macro]
version = "0.5.0"
path = "./macro"
optional = true
