[package]
name = "radicle-git-ext-test"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

publish = false

[lib]
doctest = false
test = true
doc = false

[features]
test = []

[dependencies]
proptest = "1"

[dev-dependencies]
assert_matches = "1.5"
minicbor = "0.13"
serde = "1"
serde_json = "1"

[dependencies.git2]
version = "0.18.1"
default-features = false
features = ["vendored-libgit2"]

[dependencies.radicle-git-ext]
path = ".."
features = ["serde", "minicbor"]

[dependencies.test-helpers]
path = "../../test/test-helpers"
