[package]
name = "radicle-git-ext-test"
version = "0.1.0"
edition.workspace = true
license.workspace = true

publish = false

[lib]
doctest = false
test = true
doc = false

[features]
test = []

[dependencies]
proptest = "1"

[dev-dependencies]
assert_matches = "1.5"
minicbor = "0.13"
serde = "1"
serde_json = "1"

[dependencies.git2]
workspace = true

[dependencies.radicle-git-ext]
path = ".."
features = ["serde", "minicbor"]

[dependencies.test-helpers]
path = "../../test/test-helpers"
