[package]
name = "radicle-surf-test"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

publish = false

[lib]
test = true

[features]
test = []

[dev-dependencies]
nonempty = "0.5"
pretty_assertions = "1.3.0"
proptest = "1"
serde_json = "1"

[dev-dependencies.git2]
version = "0.18.1"
default-features = false
features = ["vendored-libgit2"]

[dev-dependencies.radicle-git-ext]
path = "../../radicle-git-ext"

[dev-dependencies.radicle-git-ext-test]
path = "../../radicle-git-ext/t"
features = ["test"]

[dev-dependencies.radicle-surf]
path = ".."
features = ["serde"]

[dev-dependencies.test-helpers]
path = "../../test/test-helpers"
