[package]
name = "test-helpers"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
publish = false

description = "Test helpers"

[lib]
doctest = false
test = false

[dependencies]
env_logger = ">= 0.9"
log = ">= 0.4"
pretty_assertions = "1.1"
serde = "1"
serde_json = "1"
tempfile = "3.4"
tracing = "0.1"
proptest = "1"

[dependencies.minicbor]
version = "0.13"
features = ["std"]

[dependencies.tracing-subscriber]
version = "0.3.16"
features = ["std", "env-filter", "fmt", "json"]
