[package]
name = "git-ref-format-core"
version = "0.5.0"
authors = ["Kim Altintop <kim@eagain.st>"]
description = "Core types for the git-ref-format crate"
keywords = ["git", "references"]
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
doctest = false
test = false

[dependencies]
thiserror = "1.0"

[dependencies.bstr]
version = "1.3"
optional = true

[dependencies.minicbor]
version = "0.13"
features = ["std"]
optional = true

[dependencies.percent-encoding]
version = "2.1.0"
optional = true

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true
