[package]
name = "git-ref-format-macro"
version = "0.3.1"
authors = ["Kim Altintop <kim@eagain.st>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "Macros for the git-ref-format crate"
keywords = ["git", "references"]

[lib]
doctest = false
proc-macro = true
test = false

[dependencies]
proc-macro-error2 = "2"
quote = "1"
syn = "2"

[dependencies.git-ref-format-core]
version = "0.3.1"
path = "../core"
