[package]
name = "git-ref-format-macro"
version = "0.5.0"
authors = ["Kim Altintop <kim@eagain.st>"]
description = "Macros for the git-ref-format crate"
keywords = ["git", "references"]
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
doctest = false
proc-macro = true
test = false

[dependencies]
proc-macro-error2 = "2"
quote = "1"
syn = "2"

[dependencies.git-ref-format-core]
version = "0.5.0"
path = "../core"
