[package]
name = "git-ref-format-test"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

publish = false

[lib]
doctest = false
test = true
doc = false

[features]
test = []

[dependencies]
proptest = "1"

[dev-dependencies]
assert_matches = "1.5"
serde_json = "1"

[dev-dependencies.git-ref-format]
path = ".."
features = ["macro", "minicbor", "serde"]

[dev-dependencies.test-helpers]
path = "../../test/test-helpers"
